--- a/login_page/Sigin.html
+++ b/login_page/Sigin.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="./img/Hacker-PNG-Picture.png" type="image/x-icon">
     <title>Sign In</title>
     <script src="https://kit.fontawesome.com/4f928f5798.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div class="form-box">
-            <h1 class="title">sign In</h1>
+            <h1 class="title">Sign In</h1>
             <form action="">
                 <div class="input-group">
                     <div class="input-field">
