--- a/nav-bar/index.html
+++ b/nav-bar/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./image/lotus-flower-logo-and-symbols-vector-template-Photoroom.png" type="image/x-icon" sizes="200x200">
+    <title>nav</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+        <header>
+            <img src="./image/lotus-flower-logo-and-symbols-vector-template-Photoroom.png" alt="logo" height="100px" width="100px" class="logo">
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="cta"><button>Contact</button></a>
+        </header>
 </body>
 </html>
