--- a/nav-bar/index.html
+++ b/nav-bar/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./image/lotus-flower-logo-and-symbols-vector-template-Photoroom.png" type="image/x-icon" sizes="200x200">
-    <title>nav</title>
+    <title>navbar</title>
 </head>
 <body>
         <header>
